--- a/assets/index.html
+++ b/assets/index.html
@@ -163,6 +163,36 @@
     <p class="text-[#274C5B] ml-[30px] text-[22px] font-bold">Organic Almonds</p>
     <img class="ml-[30px]" src="./img/Frame (4).png" alt="">
       </div>
+        <div class="flex">
+    <img src="./img/IMAGE (12).png" alt="">
+    <div>
+        <p class="font-['yellowtail'] text-[36px] text-[#7EB693] pt-[40.67px]  pl-[30px]">Eco Friendly</p>
+        <p class="text-[45px] text-[#274C5B] pl-[30px] font-bold">From our Farm <br> to your Home.</p>
+        <p class="mt-[29px] text-[26px] text-[#274C5B] pl-[30px] font-bold">Choose Your Products</p>
+        <p class="text-[18px] text-[#525C60] pl-[30px]">In our listing, we have several collections of organic products. This is <br>
+            the place where you need to choose the product you want. </p>
+            <p class="mt-[29px] text-[26px] text-[#274C5B] pl-[30px] font-bold">Farmers will produce it</p>
+            <p class="text-[18px] text-[#525C60] pl-[30px]">The Product that you ordered will be verified that we <br>
+                have or not if have we will start to move on with the next step. </p>
+                <p class="mt-[29px] text-[26px] text-[#274C5B] pl-[30px] font-bold">We Can Delivery too</p>
+                <p class="text-[18px] text-[#525C60] pl-[30px]">If you are not comfortable going to the nearby market place we also <br>
+                    will deliver your product to your doorstep. </p>
+    </div>
+</div>
+<div class="flex gap-[30px]">
+    <div style="background-image: url(./img/IMAGE\ \(13\).png);" class="mt-[140px]">
+        <button class="bg-[#FFF] font-bold w-[281px] h-[90px] ml-[90px] mb-[242px] mr-[89px] mt-[243px] text-[25px] pt-[25px] rounded-[16px]  pl-[34.82px]  flex text-[#274C5B]">Fruit Juice </button>
+
+    </div>
+    <div style="background-image: url(./img/IMAGE\ \(14\).png);" class="mt-[140px]">
+        <button class="bg-[#FFF] font-bold w-[281px] h-[90px] ml-[90px] mb-[242px] mr-[89px] mt-[243px] text-[25px] pt-[25px] rounded-[16px]  pl-[34.82px]  flex text-[#274C5B]">Organic Food</button>
+
+    </div>
+    <div style="background-image: url(./img/IMAGE\ \(15\).png);" class="mt-[140px]">
+        <button class="bg-[#FFF] font-bold w-[281px] h-[90px] ml-[90px] mb-[242px] mr-[89px] mt-[243px] text-[25px] pt-[25px] rounded-[16px]  pl-[34.82px]  flex text-[#274C5B]">Nut Cookies</button>
+
+    </div>
+</div>
 </div>
 </div>
 </body>
